syntax = "proto3";

package calculator;

option go_package = "/proto/gen;mainpb";

service Calculator {
    rpc Add (AddRequest) returns (AddResponse);
    rpc GenerateFibonacci (FibonacciRequest) returns (stream FibonacciResponse);
    rpc SendNumber (stream NumberRequest) returns (NumberResponse);
}

message NumberRequest{
    int32 number = 1;
}

message NumberResponse {
    int32 sum = 1;
}


message AddRequest {
    int32 a = 1;
    int32 b = 2;
} 

message AddResponse {
    int32 sum = 1;
}

message FibonacciRequest {
    int32 n = 1;
}

message FibonacciResponse {
    int32 number = 1;
}